tests/snapshots/btor2_test__parse_count2.snap
---
source: tests/btor2_test.rs
expression: sys.serialize_to_str(&ctx)
---
count2
bad %7 : bv<1> = eq(_state_0, 3'b111)
state _state_0 : bv<3>
  [init] 3'b000
  [next] add(_state_0, 3'b001)
