tests/snapshots/btor2_test__serialize_pass_through.snap
---
source: tests/btor2_test.rs
expression: sys.serialize_to_str(&ctx)
---
pass
input i : bv<1>
output o : bv<1> = i
